Fixed collapse menu background.

--- a/web/assets/css/common_ui.css
+++ b/web/assets/css/common_ui.css
@@ -833,6 +833,10 @@ a:active .tb-cntrl {
   height: 3px;
 }
 
+#headerview .navbar .nav-collapse {
+  background: #1b1b1b;
+}
+
 #headerview .navbar .nav-collapse .nav>li>a {
   padding: 0px 16px 0px 16px;	
   font-weight: normal;
@@ -889,23 +893,14 @@ a:active .tb-cntrl {
 #headerview .logo {
   width: 100%;	
   margin: 14px 0px 0px 0px;
-
-/*  
-  margin: 14px 0px 0px 0px;
-  width: 132px;
-*/    
   height: 17px;
   line-height: 17px;
 }
 
 #headerview .logo a {
-/*	
-  float:left; 
-*/  
   display:block;
-text-align: center;
-margin: 0 auto;
-
+  text-align: center;
+  margin: 0 auto;
   line-height:20px; 
   text-indent: -10000px;  
   overflow: hidden;   
